@@ -550,7 +550,7 @@ document (a document-wide <a class="reference" href="#table-of-contents">table o
 <span id="image-target-2"></span><span id="image-target-1"></span><img alt="../../../docs/user/rst/images/title.png" id="image-target-3" name="image-target-3" src="../../../docs/user/rst/images/title.png" />
 <p>A figure directive:</p>
 <div align="right" class="figclass1 figclass2 figure">
-<img alt="reStructuredText, the markup syntax" class="class1 class2" src="../../../docs/user/rst/images/biohazard.png" width="50" />
+<img alt="reStructuredText, the markup syntax" class="class1 class2" src="../../../docs/user/rst/images/biohazard.png" style="width: 50px;" />
 <p class="caption">A figure is an image with a caption and/or a legend:</p>
 <div class="legend">
 <table border="1" class="docutils">
@@ -576,7 +576,7 @@ document (a document-wide <a class="reference" href="#table-of-contents">table o
 <p>This paragraph might flow around the figure...</p>
 <p>A centered figure:</p>
 <div align="center" class="figure">
-<img alt="../../../docs/user/rst/images/biohazard.png" src="../../../docs/user/rst/images/biohazard.png" width="50" />
+<img alt="../../../docs/user/rst/images/biohazard.png" src="../../../docs/user/rst/images/biohazard.png" style="width: 50px;" />
 <p class="caption">This is the caption.</p>
 <div class="legend">
 <p>This is the legend.</p>
@@ -586,7 +586,7 @@ document (a document-wide <a class="reference" href="#table-of-contents">table o
 <p>This paragraph might flow around the figure...</p>
 <p>A left-aligned figure:</p>
 <div align="left" class="figure">
-<img alt="../../../docs/user/rst/images/biohazard.png" src="../../../docs/user/rst/images/biohazard.png" width="50" />
+<img alt="../../../docs/user/rst/images/biohazard.png" src="../../../docs/user/rst/images/biohazard.png" style="width: 50px;" />
 <p class="caption">This is the caption.</p>
 <div class="legend">
 <p>This is the legend.</p>
@@ -594,6 +594,15 @@ document (a document-wide <a class="reference" href="#table-of-contents">table o
 </div>
 </div>
 <p>This paragraph might flow around the figure...</p>
+<p>Now widths:</p>
+<p>An image 2 em wide:</p>
+<img alt="../../../docs/user/rst/images/biohazard.png" src="../../../docs/user/rst/images/biohazard.png" style="width: 2em;" />
+<p>An image 2 em wide and 30 pixel high:</p>
+<img alt="../../../docs/user/rst/images/biohazard.png" src="../../../docs/user/rst/images/biohazard.png" style="width: 2em; height: 30px;" />
+<p>An image occupying 70% of the line width:</p>
+<img alt="../../../docs/user/rst/images/biohazard.png" src="../../../docs/user/rst/images/biohazard.png" style="width: 70%;" />
+<p>An image 3 cm high:</p>
+<img alt="../../../docs/user/rst/images/biohazard.png" src="../../../docs/user/rst/images/biohazard.png" style="height: 3cm;" />
 </div>
 <div class="section" id="admonitions">
 <h3><a class="toc-backref" href="#id64" name="admonitions">2.14.3&nbsp;&nbsp;&nbsp;Admonitions</a></h3>
